// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Snapshot renders with five items and column 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="w-full h-80 lg:h-full flex flex-col overflow-y-auto lg:overflow-y-hidden"
      >
        <li
          class="cursor-pointer w-full py-3"
        >
          <div
            class="flex items-center"
          >
            <img
              alt="example"
              class="rounded-2xl overflow-hidden"
              data-nimg="1"
              decoding="async"
              height="150"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F1%3Fv%3D4&w=384&q=75"
              srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F1%3Fv%3D4&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F1%3Fv%3D4&w=384&q=75 2x"
              style="color: transparent;"
              width="150"
            />
            <div
              class="pl-[21px]"
            >
              <h4
                class="text-lg
      font-avenirHeavy font-black
      text-gray-500"
              >
                example
              </h4>
              <p
                class="whitespace-pre-line  text-gray-500"
              >
                example
              </p>
            </div>
          </div>
        </li>
        <li
          class="cursor-pointer w-full py-3"
        >
          <div
            class="flex items-center"
          >
            <img
              alt="example2"
              class="rounded-2xl overflow-hidden"
              data-nimg="1"
              decoding="async"
              height="150"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F2%3Fv%3D4&w=384&q=75"
              srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F2%3Fv%3D4&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F2%3Fv%3D4&w=384&q=75 2x"
              style="color: transparent;"
              width="150"
            />
            <div
              class="pl-[21px]"
            >
              <h4
                class="text-lg
      font-avenirHeavy font-black
      text-gray-500"
              >
                example2
              </h4>
              <p
                class="whitespace-pre-line  text-gray-500"
              >
                example2
              </p>
            </div>
          </div>
        </li>
        <li
          class="cursor-pointer w-full py-3"
        >
          <div
            class="flex items-center"
          >
            <img
              alt="example3"
              class="rounded-2xl overflow-hidden"
              data-nimg="1"
              decoding="async"
              height="150"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F3%3Fv%3D4&w=384&q=75"
              srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F3%3Fv%3D4&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F3%3Fv%3D4&w=384&q=75 2x"
              style="color: transparent;"
              width="150"
            />
            <div
              class="pl-[21px]"
            >
              <h4
                class="text-lg
      font-avenirHeavy font-black
      text-gray-500"
              >
                example3
              </h4>
              <p
                class="whitespace-pre-line  text-gray-500"
              >
                example3
              </p>
            </div>
          </div>
        </li>
        <li
          class="cursor-pointer w-full py-3"
        >
          <div
            class="flex items-center"
          >
            <img
              alt="example4"
              class="rounded-2xl overflow-hidden"
              data-nimg="1"
              decoding="async"
              height="150"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F4%3Fv%3D4&w=384&q=75"
              srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F4%3Fv%3D4&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F4%3Fv%3D4&w=384&q=75 2x"
              style="color: transparent;"
              width="150"
            />
            <div
              class="pl-[21px]"
            >
              <h4
                class="text-lg
      font-avenirHeavy font-black
      text-gray-500"
              >
                example4
              </h4>
              <p
                class="whitespace-pre-line  text-gray-500"
              >
                example4
              </p>
            </div>
          </div>
        </li>
        <li
          class="cursor-pointer w-full py-3"
        >
          <div
            class="flex items-center"
          >
            <img
              alt="example5"
              class="rounded-2xl overflow-hidden"
              data-nimg="1"
              decoding="async"
              height="150"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F5%3Fv%3D4&w=384&q=75"
              srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F5%3Fv%3D4&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F5%3Fv%3D4&w=384&q=75 2x"
              style="color: transparent;"
              width="150"
            />
            <div
              class="pl-[21px]"
            >
              <h4
                class="text-lg
      font-avenirHeavy font-black
      text-gray-500"
              >
                example5
              </h4>
              <p
                class="whitespace-pre-line  text-gray-500"
              >
                example5
              </p>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="w-full h-80 lg:h-full flex flex-col overflow-y-auto lg:overflow-y-hidden"
    >
      <li
        class="cursor-pointer w-full py-3"
      >
        <div
          class="flex items-center"
        >
          <img
            alt="example"
            class="rounded-2xl overflow-hidden"
            data-nimg="1"
            decoding="async"
            height="150"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F1%3Fv%3D4&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F1%3Fv%3D4&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F1%3Fv%3D4&w=384&q=75 2x"
            style="color: transparent;"
            width="150"
          />
          <div
            class="pl-[21px]"
          >
            <h4
              class="text-lg
      font-avenirHeavy font-black
      text-gray-500"
            >
              example
            </h4>
            <p
              class="whitespace-pre-line  text-gray-500"
            >
              example
            </p>
          </div>
        </div>
      </li>
      <li
        class="cursor-pointer w-full py-3"
      >
        <div
          class="flex items-center"
        >
          <img
            alt="example2"
            class="rounded-2xl overflow-hidden"
            data-nimg="1"
            decoding="async"
            height="150"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F2%3Fv%3D4&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F2%3Fv%3D4&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F2%3Fv%3D4&w=384&q=75 2x"
            style="color: transparent;"
            width="150"
          />
          <div
            class="pl-[21px]"
          >
            <h4
              class="text-lg
      font-avenirHeavy font-black
      text-gray-500"
            >
              example2
            </h4>
            <p
              class="whitespace-pre-line  text-gray-500"
            >
              example2
            </p>
          </div>
        </div>
      </li>
      <li
        class="cursor-pointer w-full py-3"
      >
        <div
          class="flex items-center"
        >
          <img
            alt="example3"
            class="rounded-2xl overflow-hidden"
            data-nimg="1"
            decoding="async"
            height="150"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F3%3Fv%3D4&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F3%3Fv%3D4&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F3%3Fv%3D4&w=384&q=75 2x"
            style="color: transparent;"
            width="150"
          />
          <div
            class="pl-[21px]"
          >
            <h4
              class="text-lg
      font-avenirHeavy font-black
      text-gray-500"
            >
              example3
            </h4>
            <p
              class="whitespace-pre-line  text-gray-500"
            >
              example3
            </p>
          </div>
        </div>
      </li>
      <li
        class="cursor-pointer w-full py-3"
      >
        <div
          class="flex items-center"
        >
          <img
            alt="example4"
            class="rounded-2xl overflow-hidden"
            data-nimg="1"
            decoding="async"
            height="150"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F4%3Fv%3D4&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F4%3Fv%3D4&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F4%3Fv%3D4&w=384&q=75 2x"
            style="color: transparent;"
            width="150"
          />
          <div
            class="pl-[21px]"
          >
            <h4
              class="text-lg
      font-avenirHeavy font-black
      text-gray-500"
            >
              example4
            </h4>
            <p
              class="whitespace-pre-line  text-gray-500"
            >
              example4
            </p>
          </div>
        </div>
      </li>
      <li
        class="cursor-pointer w-full py-3"
      >
        <div
          class="flex items-center"
        >
          <img
            alt="example5"
            class="rounded-2xl overflow-hidden"
            data-nimg="1"
            decoding="async"
            height="150"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F5%3Fv%3D4&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F5%3Fv%3D4&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F5%3Fv%3D4&w=384&q=75 2x"
            style="color: transparent;"
            width="150"
          />
          <div
            class="pl-[21px]"
          >
            <h4
              class="text-lg
      font-avenirHeavy font-black
      text-gray-500"
            >
              example5
            </h4>
            <p
              class="whitespace-pre-line  text-gray-500"
            >
              example5
            </p>
          </div>
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`List Snapshot renders with five items and row 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="w-full h-80 lg:h-full flex flex-row overflow-x-auto"
      >
        <li
          class="cursor-pointer w-[468px] shrink-0 py-3"
        >
          <div
            class="flex items-center"
          >
            <img
              alt="example"
              class="rounded-2xl overflow-hidden"
              data-nimg="1"
              decoding="async"
              height="150"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F1%3Fv%3D4&w=384&q=75"
              srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F1%3Fv%3D4&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F1%3Fv%3D4&w=384&q=75 2x"
              style="color: transparent;"
              width="150"
            />
            <div
              class="pl-[21px]"
            >
              <h4
                class="text-lg
      font-avenirHeavy font-black
      text-gray-500"
              >
                example
              </h4>
              <p
                class="whitespace-pre-line  text-gray-500"
              >
                example
              </p>
            </div>
          </div>
        </li>
        <li
          class="cursor-pointer w-[468px] shrink-0 py-3"
        >
          <div
            class="flex items-center"
          >
            <img
              alt="example2"
              class="rounded-2xl overflow-hidden"
              data-nimg="1"
              decoding="async"
              height="150"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F2%3Fv%3D4&w=384&q=75"
              srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F2%3Fv%3D4&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F2%3Fv%3D4&w=384&q=75 2x"
              style="color: transparent;"
              width="150"
            />
            <div
              class="pl-[21px]"
            >
              <h4
                class="text-lg
      font-avenirHeavy font-black
      text-gray-500"
              >
                example2
              </h4>
              <p
                class="whitespace-pre-line  text-gray-500"
              >
                example2
              </p>
            </div>
          </div>
        </li>
        <li
          class="cursor-pointer w-[468px] shrink-0 py-3"
        >
          <div
            class="flex items-center"
          >
            <img
              alt="example3"
              class="rounded-2xl overflow-hidden"
              data-nimg="1"
              decoding="async"
              height="150"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F3%3Fv%3D4&w=384&q=75"
              srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F3%3Fv%3D4&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F3%3Fv%3D4&w=384&q=75 2x"
              style="color: transparent;"
              width="150"
            />
            <div
              class="pl-[21px]"
            >
              <h4
                class="text-lg
      font-avenirHeavy font-black
      text-gray-500"
              >
                example3
              </h4>
              <p
                class="whitespace-pre-line  text-gray-500"
              >
                example3
              </p>
            </div>
          </div>
        </li>
        <li
          class="cursor-pointer w-[468px] shrink-0 py-3"
        >
          <div
            class="flex items-center"
          >
            <img
              alt="example4"
              class="rounded-2xl overflow-hidden"
              data-nimg="1"
              decoding="async"
              height="150"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F4%3Fv%3D4&w=384&q=75"
              srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F4%3Fv%3D4&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F4%3Fv%3D4&w=384&q=75 2x"
              style="color: transparent;"
              width="150"
            />
            <div
              class="pl-[21px]"
            >
              <h4
                class="text-lg
      font-avenirHeavy font-black
      text-gray-500"
              >
                example4
              </h4>
              <p
                class="whitespace-pre-line  text-gray-500"
              >
                example4
              </p>
            </div>
          </div>
        </li>
        <li
          class="cursor-pointer w-[468px] shrink-0 py-3"
        >
          <div
            class="flex items-center"
          >
            <img
              alt="example5"
              class="rounded-2xl overflow-hidden"
              data-nimg="1"
              decoding="async"
              height="150"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F5%3Fv%3D4&w=384&q=75"
              srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F5%3Fv%3D4&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F5%3Fv%3D4&w=384&q=75 2x"
              style="color: transparent;"
              width="150"
            />
            <div
              class="pl-[21px]"
            >
              <h4
                class="text-lg
      font-avenirHeavy font-black
      text-gray-500"
              >
                example5
              </h4>
              <p
                class="whitespace-pre-line  text-gray-500"
              >
                example5
              </p>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="w-full h-80 lg:h-full flex flex-row overflow-x-auto"
    >
      <li
        class="cursor-pointer w-[468px] shrink-0 py-3"
      >
        <div
          class="flex items-center"
        >
          <img
            alt="example"
            class="rounded-2xl overflow-hidden"
            data-nimg="1"
            decoding="async"
            height="150"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F1%3Fv%3D4&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F1%3Fv%3D4&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F1%3Fv%3D4&w=384&q=75 2x"
            style="color: transparent;"
            width="150"
          />
          <div
            class="pl-[21px]"
          >
            <h4
              class="text-lg
      font-avenirHeavy font-black
      text-gray-500"
            >
              example
            </h4>
            <p
              class="whitespace-pre-line  text-gray-500"
            >
              example
            </p>
          </div>
        </div>
      </li>
      <li
        class="cursor-pointer w-[468px] shrink-0 py-3"
      >
        <div
          class="flex items-center"
        >
          <img
            alt="example2"
            class="rounded-2xl overflow-hidden"
            data-nimg="1"
            decoding="async"
            height="150"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F2%3Fv%3D4&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F2%3Fv%3D4&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F2%3Fv%3D4&w=384&q=75 2x"
            style="color: transparent;"
            width="150"
          />
          <div
            class="pl-[21px]"
          >
            <h4
              class="text-lg
      font-avenirHeavy font-black
      text-gray-500"
            >
              example2
            </h4>
            <p
              class="whitespace-pre-line  text-gray-500"
            >
              example2
            </p>
          </div>
        </div>
      </li>
      <li
        class="cursor-pointer w-[468px] shrink-0 py-3"
      >
        <div
          class="flex items-center"
        >
          <img
            alt="example3"
            class="rounded-2xl overflow-hidden"
            data-nimg="1"
            decoding="async"
            height="150"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F3%3Fv%3D4&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F3%3Fv%3D4&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F3%3Fv%3D4&w=384&q=75 2x"
            style="color: transparent;"
            width="150"
          />
          <div
            class="pl-[21px]"
          >
            <h4
              class="text-lg
      font-avenirHeavy font-black
      text-gray-500"
            >
              example3
            </h4>
            <p
              class="whitespace-pre-line  text-gray-500"
            >
              example3
            </p>
          </div>
        </div>
      </li>
      <li
        class="cursor-pointer w-[468px] shrink-0 py-3"
      >
        <div
          class="flex items-center"
        >
          <img
            alt="example4"
            class="rounded-2xl overflow-hidden"
            data-nimg="1"
            decoding="async"
            height="150"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F4%3Fv%3D4&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F4%3Fv%3D4&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F4%3Fv%3D4&w=384&q=75 2x"
            style="color: transparent;"
            width="150"
          />
          <div
            class="pl-[21px]"
          >
            <h4
              class="text-lg
      font-avenirHeavy font-black
      text-gray-500"
            >
              example4
            </h4>
            <p
              class="whitespace-pre-line  text-gray-500"
            >
              example4
            </p>
          </div>
        </div>
      </li>
      <li
        class="cursor-pointer w-[468px] shrink-0 py-3"
      >
        <div
          class="flex items-center"
        >
          <img
            alt="example5"
            class="rounded-2xl overflow-hidden"
            data-nimg="1"
            decoding="async"
            height="150"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F5%3Fv%3D4&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F5%3Fv%3D4&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F5%3Fv%3D4&w=384&q=75 2x"
            style="color: transparent;"
            width="150"
          />
          <div
            class="pl-[21px]"
          >
            <h4
              class="text-lg
      font-avenirHeavy font-black
      text-gray-500"
            >
              example5
            </h4>
            <p
              class="whitespace-pre-line  text-gray-500"
            >
              example5
            </p>
          </div>
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`List Snapshot renders with just one item and column 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="w-full h-80 lg:h-full flex flex-col overflow-y-auto lg:overflow-y-hidden"
      >
        <li
          class="cursor-pointer w-full py-3"
        >
          <div
            class="flex items-center"
          >
            <img
              alt="example"
              class="rounded-2xl overflow-hidden"
              data-nimg="1"
              decoding="async"
              height="150"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F1%3Fv%3D4&w=384&q=75"
              srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F1%3Fv%3D4&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F1%3Fv%3D4&w=384&q=75 2x"
              style="color: transparent;"
              width="150"
            />
            <div
              class="pl-[21px]"
            >
              <h4
                class="text-lg
      font-avenirHeavy font-black
      text-gray-500"
              >
                example
              </h4>
              <p
                class="whitespace-pre-line  text-gray-500"
              >
                example
              </p>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="w-full h-80 lg:h-full flex flex-col overflow-y-auto lg:overflow-y-hidden"
    >
      <li
        class="cursor-pointer w-full py-3"
      >
        <div
          class="flex items-center"
        >
          <img
            alt="example"
            class="rounded-2xl overflow-hidden"
            data-nimg="1"
            decoding="async"
            height="150"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F1%3Fv%3D4&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F1%3Fv%3D4&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F1%3Fv%3D4&w=384&q=75 2x"
            style="color: transparent;"
            width="150"
          />
          <div
            class="pl-[21px]"
          >
            <h4
              class="text-lg
      font-avenirHeavy font-black
      text-gray-500"
            >
              example
            </h4>
            <p
              class="whitespace-pre-line  text-gray-500"
            >
              example
            </p>
          </div>
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`List Snapshot renders with just one item and row 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <ul
        class="w-full h-80 lg:h-full flex flex-row overflow-x-auto"
      >
        <li
          class="cursor-pointer w-[468px] shrink-0 py-3"
        >
          <div
            class="flex items-center"
          >
            <img
              alt="example"
              class="rounded-2xl overflow-hidden"
              data-nimg="1"
              decoding="async"
              height="150"
              loading="lazy"
              src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F1%3Fv%3D4&w=384&q=75"
              srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F1%3Fv%3D4&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F1%3Fv%3D4&w=384&q=75 2x"
              style="color: transparent;"
              width="150"
            />
            <div
              class="pl-[21px]"
            >
              <h4
                class="text-lg
      font-avenirHeavy font-black
      text-gray-500"
              >
                example
              </h4>
              <p
                class="whitespace-pre-line  text-gray-500"
              >
                example
              </p>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </body>,
  "container": <div>
    <ul
      class="w-full h-80 lg:h-full flex flex-row overflow-x-auto"
    >
      <li
        class="cursor-pointer w-[468px] shrink-0 py-3"
      >
        <div
          class="flex items-center"
        >
          <img
            alt="example"
            class="rounded-2xl overflow-hidden"
            data-nimg="1"
            decoding="async"
            height="150"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F1%3Fv%3D4&w=384&q=75"
            srcset="/_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F1%3Fv%3D4&w=256&q=75 1x, /_next/image?url=https%3A%2F%2Favatars.githubusercontent.com%2Fu%2F1%3Fv%3D4&w=384&q=75 2x"
            style="color: transparent;"
            width="150"
          />
          <div
            class="pl-[21px]"
          >
            <h4
              class="text-lg
      font-avenirHeavy font-black
      text-gray-500"
            >
              example
            </h4>
            <p
              class="whitespace-pre-line  text-gray-500"
            >
              example
            </p>
          </div>
        </div>
      </li>
    </ul>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
